// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <input
        class="sc-iqAbSa fdLqwF"
        id="textField"
        name="name"
        placeholder="Text"
        type="text"
        value="test"
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Bad name
      </span>
    </div>
  </form>
</div>
`;

exports[`<TextField /> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="textField"
  name="name"
  placeholder="Text"
  type="text"
  value=""
/>
`;

exports[`<TextField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="textField"
        label="Test"
        name="name"
        placeholder="Text*"
        required=""
        type="text"
        value=""
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<TextField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="textField"
        label="Test"
        name="name"
        placeholder="Text"
        type="text"
        value=""
      />
    </div>
  </form>
</div>
`;
